Fix typo for Jekyll theme

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ author:
 description: "Blogging about software analysis for Safety and Security (SS)"
 
 # Build settings
-theme: jekill-theme-cayman
+theme: jekyll-theme-cayman
